fix: add overflow

--- a/src/assets/scss/base/basic.scss
+++ b/src/assets/scss/base/basic.scss
@@ -39,6 +39,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   height: 100svh;
+  overflow-x: hidden;
 }
 
 main {
